	- Change to HasCollectible and GetCollectibleNum:
		new optional boolean (IgnoreSpoof), ignores collectible block when set to true
* Game:
	- ShowGenericLeaderboard no longer fades to main menu
* PersistentGameData:
	- TryUnlock now accepts an optional boolean to prevent popping up with the achievement paper for modded achievements
Additions:
* Game:
	- SetDizzyAmount(amount, intensity)
	- GetDizzyAmount()
* PlayerManager:
	- AnyPlayerTypeHasTrinket(PlayerType, TrinketType, IgnoreModifiers = false)
	- AnyPlayerTypeHasCollectible(PlayerType, CollectibleType, IgnoreModifiers = false)
* Lootlist:
	- constructor
	- PushEntry(Type, Variant, SubType, Seed = Random(), RNG = nil)
	- GetEntries
* LootListEntry:
	- [Get]Type/Variant/SubType/Seed/RNG
* EntityPlayer:
	- Get/SetBombPlaceDelay
	- Get/SetBloodLustCounter
	- GetSpoofedCollectiblesList
	- New functionality for blocking items:
		BlockCollectible(int itemID)
		UnblockCollectible(int itemID)
		IsCollectibleBlocked(int itemID)
	- HasGoldenTrinket
* EntityTear:
	- GetTearHaloSprite
	- GetTearEffectSprite
	- GetDeadEyeSprite
	- ResetSpriteScale(bool Force) - New optional "force" boolean, when set to true forces the tear to re-evaluate which scale animation it should be playing
* EntityPickup:
	- GetLootList(ShouldAdvance = false)
	- GetPickupGhost
	- UpdatePickupGhosts
* EntityNPC:
	- GetFireplaceLoot
	- GetShopkeeperLoot
* ItemConfigItem:
	- HasCustomTag
	- GetCustomTags
* Input:
	- GetDeviceNameByIdx
* Isaac:
	- Get/SetDwmWindowAttribute (for use with new DwmWindowAttributes enum)
	- Get/SetWindowTitle	(appends text to our title as to avoid confusion)
	- SetIcon(int/string,bool)	(takes a 0/1 int or a path to .ico file, bool bypasses the 16x16 resolution cap)
* Game
	- SetBloom
* Console:
	* Added a popup error when a script ran by luamod errors, highlighting the last error thrown, to prevent it from being instantly buried
* Isaac: